--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
     "@types/jest": "^24.0.23",
+    "@typescript-eslint/eslint-plugin": "^2.21.0",
+    "@typescript-eslint/parser": "^2.21.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
     "husky": "^3.0.9",
     "jest": "^24.9.0",
     "lerna": "^3.18.4",
